# rustic_translator

./: MANIFEST.in  README.md  export_translations.py  pyproject.toml  setup.py
rustic_translator/: export_translations.py  hooks.py  modules.txt  setup_translations.py
rustic_translator/api/: translation.py
rustic_translator/config/: desktop.py
rustic_translator/fixtures/: role.json
rustic_translator/public/css/: rustic_translator.css
rustic_translator/public/js/: translation_editor.js
rustic_translator/rustic_translator/doctype/translation_backup/: translation_backup.json  translation_backup.py
rustic_translator/rustic_translator/doctype/translation_edit_log/: translation_edit_log.json  translation_edit_log.py
rustic_translator/rustic_translator/doctype/translation_edit_session/: translation_edit_session.json  translation_edit_session.py
rustic_translator/rustic_translator/doctype/translation_manager_settings/: translation_manager_settings.json  translation_manager_settings.py
rustic_translator/rustic_translator/page/translation_editor/: translation_editor.html  translation_editor.js  translation_editor.json  translation_editor.py
rustic_translator/translations/: ar.csv
