[project]
name = "rustic_translator"
authors = [
    { name = "Ammsamm", email = "ammsamm@example.com"}
]
description = "Translation management system for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
